<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cardapio</string>

    <!-- Cadastro e Login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_passwordrecover">ENVIAR EMAIL DE REDEFINIÇÃO</string>
    <string name="btn_register">CRIE UMA CONTA</string>
    <string name="recover_intructions">Esqueceu sua senha? Digite seu email a baixo e nós lhe enviaremos um link para definir uma nova senha"</string>
    <string name="btn_link_to_forget_password">Esqueceu sua senha? Clique aqui!</string>
    <string name="btn_link_to_login">Já possui uma conta? Faça o login.</string>


    <string name="welcome">Bem-Vindo!</string>
    <string name="btn_logout">SAIR</string>
    <string name="name">Usuário</string>

</resources>