<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_background"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Cadastro"
            android:textSize="40dp"
            android:layout_marginBottom="25dp"
            android:textColor="@color/title"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/loginInput_background"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/loginInput_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/loginInput_background"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <!--<Button-->
            <!--android:id="@+id/btnRegister"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@color/btn_login_bg"-->
            <!--android:text="@string/btn_register"-->
            <!--android:textColor="@color/white" />-->

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login"/>

        <!-- Link to Login Screen -->


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/btn_login"
            />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/login"
            android:textSize="15dp"
            />
    </LinearLayout>

</LinearLayout>
