<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Redifinição de Senha"
            android:textSize="30dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/title"/>

        <TextView
            android:id="@+id/btnLinkToForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@null"
            android:text="@string/recover_intructions"
            android:textAllCaps="false"
            android:textColor="@color/linktoforgotpassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/recoveremail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:background="@color/loginInput_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />


        <!-- Login Button -->

        <!--<Button-->
            <!--android:id="@+id/btnLogin"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="@color/btn_login_bg"-->
            <!--android:text="@string/btn_login"-->
            <!--android:textColor="@color/btn_login"-->
            <!--/>-->
        <TextView
            android:id="@+id/btnSend"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/btn_passwordrecover"
            android:textColor="@color/btn_login"/>

        <!-- Link to Login Screen -->







    </LinearLayout>

</LinearLayout>